syntax = "proto3";
package Protocol;

message C_MYROOM_GET_ROOMINFO
{
}

message S_MYROOM_GET_ROOMINFO
{
	string roomInfo = 1;
}

message C_MYROOM_SET_ROOMINFO
{
	string roomInfo = 1;
}

message S_MYROOM_SET_ROOMINFO
{
	bool success = 1;
}

message C_MYROOM_OTHER_ROOM_LIST
{
	string roomInfo = 1;
}

message S_MYROOM_OTHER_ROOM_LIST
{
	string roomInfo = 1;
}