syntax = "proto3";
package Protocol;

message Vector3
{
	float x = 1;
	float y = 2;
	float z = 3;
}

message C_BASE_INSTANTIATE_OBJECT
{
	Vector3 position = 1;
	Vector3 rotation = 2;
	string prefabName = 3;
	string objectData = 4;
}

message S_BASE_INSTANTIATE_OBJECT
{
	bool success = 1;
	int32 objectId = 2;
}

message C_BASE_REMOVE_OBJECT
{
}

message C_BASE_REMOVE_OBJECT_BY_ID
{
	int32 objectId = 1;
}

message C_BASE_GET_OBJECT
{
}

message S_BASE_ADD_OBJECT
{
	message GameObjectInfo
	{
		int32 objectId = 1;
		Vector3 position = 2;
		Vector3 rotation = 3;
		string prefabName = 4;
		string objectData = 5;
		string ownerId = 6;
	}
	repeated GameObjectInfo gameObjects = 1;
}

message S_BASE_REMOVE_OBJECT
{
	repeated int32 gameObjects = 1;
}

message C_BASE_SET_OBJECT_DATA
{
	int32 objectId = 1;
	string objectData = 2;
}

message S_BASE_SET_OBJECT_DATA
{
	bool success = 1;
}

message S_BASE_SET_OBJECT_DATA_NOTICE
{
	int32 objectId = 1;
	string objectData = 2;
}

message C_BASE_SET_TRANSFORM
{
	int32 objectId = 1;
	Vector3 position = 2;
	Vector3 rotation = 3;
}

message S_BASE_SET_TRANSFORM
{
	int32 objectId = 1;
	Vector3 position = 2;
	Vector3 rotation = 3;
}

message C_BASE_SET_ANIMATION
{
	int32 objectId = 1;
	string animationId = 2;
	string animation = 3;
}

message S_BASE_SET_ANIMATION
{
	int32 objectId = 1;
	string animationId = 2;
	string animation = 3;
}

message C_BASE_SET_ANIMATION_ONCE
{
	int32 objectId = 1;
	string animationId = 2;
	bool isLoop = 3;
	float blend = 4;
}

message S_BASE_SET_ANIMATION_ONCE
{
	int32 objectId = 1;
	string animationId = 2;
	bool isLoop = 3;
	float blend = 4;
}