syntax = "proto3";
package Protocol;

message C_OFFICE_GET_WAITING_LIST
{
}

message S_OFFICE_ADD_WAITING_CLIENT
{
	message WaitingClient
	{
		bool isObserver = 1;
		string clientId = 2;
		string nickname = 3;
	}
	repeated WaitingClient clients = 1;
}

message S_OFFICE_REMOVE_WAITING_CLIENT
{
	message WaitingClient
	{
		bool isObserver = 1;
		string clientId = 2;
	}
	repeated WaitingClient clients = 1;
}

message C_OFFICE_ACCEPT_WAIT
{
	repeated string clientId = 1;
	bool isAccepted = 2;
}

message S_OFFICE_ACCEPT_WAIT
{
	bool success = 1;
}

message S_OFFICE_ACCEPT_WAIT_NOTICE
{
	bool isAccepted = 1;
}

message C_OFFICE_GET_HOST
{
}

message S_OFFICE_GET_HOST
{
	string clientId = 1;
}

message C_OFFICE_BREAK
{
}

message S_OFFICE_BREAK
{
	bool success = 1;
}

message C_OFFICE_KICK
{
	string clientId = 1;
}

message S_OFFICE_KICK
{
	bool success = 1;
}

message OfficeUserInfo
{
	string clientId = 1;
	bool screenPermission = 2;
	bool chatPermission = 3;
	bool voicePermission = 4;
	bool videoPermission = 5;
	int32 authority = 6;
}

message C_OFFICE_GET_PERMISSION
{
	string clientId = 1;
}

message S_OFFICE_GET_PERMISSION
{
	OfficeUserInfo permission = 1;
}

message C_OFFICE_GET_PERMISSION_ALL
{
}

message S_OFFICE_GET_PERMISSION_ALL
{
	repeated OfficeUserInfo permissions = 1;
}

message C_OFFICE_SET_PERMISSION
{
	repeated OfficeUserInfo permissions = 1;
}

message S_OFFICE_SET_PERMISSION
{
	bool success = 1;
	string code = 2;
}

message C_OFFICE_SET_ROOM_INFO
{
	int32 personnel = 1;
	string password = 2;
	bool isShutdown = 3; 
	bool isAdvertising = 4;
	bool isWaitingRoom = 5;
}

message S_OFFICE_SET_ROOM_INFO
{
	bool success = 1;
}

message C_OFFICE_GET_ROOM_INFO
{
}

message S_OFFICE_GET_ROOM_INFO
{
	string roomName = 1;
	string description = 2;
	int32 topicType = 3;
	string password = 4;
	string spaceInfoId = 5;
	int32 personnel = 6;
	int32 currentPersonnel = 7;
	int32 observer = 8;
	int32 currentObserver = 9;
	int32 currentWaiting = 10;
	bool isAdvertising = 11;
	string thumbnail = 12;
	bool isWaitingRoom = 13;
	bool isShutdown = 14;
	int32 runningTime = 15;
	int32 passedTime = 16;
	string startTime = 17;
	string roomcode = 18;
	string hostNickname = 19;
}

message C_OFFICE_VIDEO_STREAM
{
	string clientid = 1;
	string url = 2;
	float volume = 3;
	float time = 4;
	bool play = 5;
	bool seek = 6;
	int32 mediaPlayerState = 7;
}

message S_OFFICE_VIDEO_STREAM
{
	string clientid = 1;
	string url = 2;
	float volume = 3;
	float time = 4;
	bool play = 5;
	bool seek = 6;
	int32 mediaPlayerState = 7;
}

message C_OFFICE_SHARE
{
	bool isShared = 1;
	int32 userId = 2;
}

message S_OFFICE_SHARE
{
	bool isShared = 1;
	int32 userId = 2;
}